# SmartSteward

./: .gitignore  README.md  smartsteward.code-workspace
backend/: server.py
docs/: mqtt_sh.md  文档.md
raspi-client/: main.py  pyproject.toml
stm32control/: CMakeLists.txt  README.md  stm32control.ioc
stm32control/Core/Inc/: adc.h  main.h  usart.h
stm32control/Core/Src/: adc.c  gpio.c  main.c  tim.c  usart.c
stm32control/HARDWARE/ADC/: adc.c  h_adc.h
stm32control/HARDWARE/CONCTRL/: conctrl.c  conctrl.h
stm32control/HARDWARE/Encoder/: Encoder.c  Encoder.h
stm32control/HARDWARE/I2C/: bsp_siic.c  bsp_siic.h
stm32control/HARDWARE/ICM20948/: bsp_imu.c  bsp_imu.h  icm20948_reg.h
stm32control/HARDWARE/MOTOR/: motor.c  motor.h
stm32control/HARDWARE/USART_X/: usart_x.c  usart_x.h
stm32control/SYSTEM/delay/: delay.c  delay.h
stm32control/SYSTEM/sys/: sys.c  sys.h
stm32control/cmake/stm32cubemx/: CMakeLists.txt
xiaozhi/: .gitignore  main.py  requirements.txt  requirements_mac.txt
xiaozhi/models/: keywords.txt
xiaozhi/src/display/: web_display.py
xiaozhi/src/iot/: thing_manager.py
xiaozhi/src/plugins/: ui.py
xiaozhi/static/: 10.html  emotion-backup.html  emotion.html  index.html
xiaozhi/test/: control.sh  test.py
xiaozhi_ros/: .gitignore  INTEGRATION.md  QUICKSTART.md  README.md  SUMMARY.md  build.sh  install_dependencies.sh  setup_environment.sh
xiaozhi_ros/docs/: ARCHITECTURE.md  EXAMPLES.md
xiaozhi_ros/src/smartsteward_bringup/: package.xml  setup.cfg  setup.py
xiaozhi_ros/src/smartsteward_bringup/launch/: smartsteward.launch.py
(+22 files in other folders)
