<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smartsteward_bringup</name>
  <version>1.0.0</version>
  <description>Launch files and configurations for SmartSteward robot system</description>
  <maintainer email="smartsteward@example.com">SmartSteward Team</maintainer>
  <license>MIT</license>

  <exec_depend>motion_control</exec_depend>
  <exec_depend>iot_manager</exec_depend>
  <exec_depend>smartsteward_interfaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
